# goose-testrail

./: INSTALL.md  LICENSE  README.md  USAGE_GUIDE.md  manifest.yaml  pyproject.toml  setup.py  testrail.py
.github/workflows/: python-package.yml
goose_testrail/: __init__.py
tests/: test_testrail.py
