[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goose-testrail"
version = "0.1.0"
description = "TestRail extension for Goose"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["goose", "testrail", "testing"]
authors = [
    { name = "Purneema Rathod", email = "purneema@squareup.com" }
]
dependencies = [
    "testrail-api>=1.0",
    "goose-mcp>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build",
    "twine",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=goose_testrail --cov-report=term-missing"

[project.entry-points.goose_extensions]
testrail = "goose_testrail:TestRailExtension"