[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goose-testrail"
version = "0.2.0"
description = "TestRail extension for Goose"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["goose", "testrail", "testing"]
authors = [
    { name = "Purneema Rathod", email = "purneema@squareup.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "testrail-api>=1.13.2",
    "mcp>=1.4.1",
    "requests>=2.31.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=goose_testrail --cov-report=term-missing"

[project.entry-points.goose_extensions]
testrail = "goose_testrail:TestRailExtension"

[tool.hatch.build.targets.wheel]
packages = ["goose_testrail"]